fix map title case, overflow on media feature module, modified amenities list page

--- a/app/webpages/amenities-lists/amenities-lists.page.less
+++ b/app/webpages/amenities-lists/amenities-lists.page.less
@@ -12,13 +12,16 @@
   &-imagebox{
     width: 150px;
   }
+  &-location{
+    color: @black;
+  }
   &-image{
     width: 150px;
     .largeRoundImageLinkWithHover(125px, 3px, @masterStrokeColor);
     &-rank{
       text-align: center;
       padding-top: 12px;
-      color: #000;
+      color: @black;
       width: 42px;
       height: 42px;
       border: 1px solid @backgroundGrey;
